<resources>
    <string name="NOTIFICATION_CHANNEL_ID">CHANNEL_ID</string>
    <string name="TR_ABOUT">TR_ABOUT</string>
    <string name="TR_ABOUT_DEVICE">TR_ABOUT_DEVICE</string>
    <string name="TR_ABOUT_EMYBABY_DESCRIPTION">TR_ABOUT_EMYBABY_DESCRIPTION</string>
    <string name="TR_ABOUT_ME">TR_ABOUT_ME</string>
    <string name="TR_ABRIL">TR_ABRIL</string>
    <string name="TR_AC">TR_AC</string>
    <string name="TR_ACCEPT">TR_ACCEPT</string>
    <string name="TR_ACCEPT_TERMS_AND_CONDITIONS">TR_ACCEPT_TERMS_AND_CONDITIONS</string>
    <string name="TR_ACEPTAR">TR_ACEPTAR</string>
    <string name="TR_ACEPTA_CONDICIONES_USO">TR_ACEPTA_CONDICIONES_USO</string>
    <string name="TR_ACTIVAR_CUENTA">TR_ACTIVAR_CUENTA</string>
    <string name="TR_ACTIVATE_ACCOUNT">TR_ACTIVATE_ACCOUNT</string>
    <string name="TR_AC_HEADER">TR_AC_HEADER</string>
    <string name="TR_AC_PERIMETRO_ABDOMINAL">TR_AC_PERIMETRO_ABDOMINAL</string>
    <string name="TR_AC_SUBHEADER">TR_AC_SUBHEADER</string>
    <string name="TR_ADD">TR_ADD</string>
    <string name="TR_ADD_ACTIVITY">TR_ADD_ACTIVITY</string>
    <string name="TR_ADD_BABY_QUESTION">TR_ADD_BABY_QUESTION</string>
    <string name="TR_ADD_CAMERA">TR_ADD_CAMERA</string>
    <string name="TR_ADD_DEVICE">TR_ADD_DEVICE</string>
    <string name="TR_ADD_DEVICE_AP_INFO">TR_ADD_DEVICE_AP_INFO</string>
    <string name="TR_ADD_DEVICE_AP_INFO_FAILURE">TR_ADD_DEVICE_AP_INFO_FAILURE</string>
    <string name="TR_ADD_DEVICE_EZ_INFO">TR_ADD_DEVICE_EZ_INFO</string>
    <string name="TR_ADD_DEVICE_FIND_DEV">TR_ADD_DEVICE_FIND_DEV</string>
    <string name="TR_ADD_DEVICE_INITIALIZE">TR_ADD_DEVICE_INITIALIZE</string>
    <string name="TR_ADD_DEVICE_REG_CLOUD">TR_ADD_DEVICE_REG_CLOUD</string>
    <string name="TR_ADD_EVENT">TR_ADD_EVENT</string>
    <string name="TR_ADD_FAMILY">TR_ADD_FAMILY</string>
    <string name="TR_ADD_GROWTH">TR_ADD_GROWTH</string>
    <string name="TR_ADD_MEDICAL_APPOINTMENT">TR_ADD_MEDICAL_APPOINTMENT</string>
    <string name="TR_ADD_NEW_BABY">TR_ADD_NEW_BABY</string>
    <string name="TR_ADD_NEW_DEVICE">TR_ADD_NEW_DEVICE</string>
    <string name="TR_ADD_NEW_TEMPERATURE">TR_ADD_NEW_TEMPERATURE</string>
    <string name="TR_ADD_TEMPERATURE_SELECT_QUESTION">TR_ADD_TEMPERATURE_SELECT_QUESTION</string>
    <string name="TR_ADD_TO_CALENDAR">TR_ADD_TO_CALENDAR</string>
    <string name="TR_ADD_VACCINE">TR_ADD_VACCINE</string>
    <string name="TR_ADVANCED">TR_ADVANCED</string>
    <string name="TR_ADVANCED_SETTINGS">TR_ADVANCED_SETTINGS</string>
    <string name="TR_AGOSTO">TR_AGOSTO</string>
    <string name="TR_AHORA_NO">TR_AHORA_NO</string>
    <string name="TR_ALL">TR_ALL</string>
    <string name="TR_ALL_DAY">TR_ALL_DAY</string>
    <string name="TR_ALTURA">TR_ALTURA</string>
    <string name="TR_ALTURA_UTERO">TR_ALTURA_UTERO</string>
    <string name="TR_ANADIR_A_MI_CALENDARIO">TR_ANADIR_A_MI_CALENDARIO</string>
    <string name="TR_ANADIR_BEBE">TR_ANADIR_BEBE</string>
    <string name="TR_ANADIR_COMENTARIO">TR_ANADIR_COMENTARIO</string>
    <string name="TR_ANADIR_FAMILIAR">TR_ANADIR_FAMILIAR</string>
    <string name="TR_ANADIR_FOTO">TR_ANADIR_FOTO</string>
    <string name="TR_ANADIR_NUEVA_ANOTACION">TR_ANADIR_NUEVA_ANOTACION</string>
    <string name="TR_ANADIR_NUEVOS_DATOS">TR_ANADIR_NUEVOS_DATOS</string>
    <string name="TR_ANADIR_TITULO">TR_ANADIR_TITULO</string>
    <string name="TR_ANALITICA">TR_ANALITICA</string>
    <string name="TR_ANYADIR_COMENTARIO">TR_ANYADIR_COMENTARIO</string>
    <string name="TR_ANYADIR_FOTO">TR_ANYADIR_FOTO</string>
    <string name="TR_ANYADIR_NUEVA_MEDIDA">TR_ANYADIR_NUEVA_MEDIDA</string>
    <string name="TR_ANYADIR_NUEVOS_DATOS">TR_ANYADIR_NUEVOS_DATOS</string>
    <string name="TR_ANYADIR_NUEVO_PESO">TR_ANYADIR_NUEVO_PESO</string>
    <string name="TR_ANYADIR_TITULO">TR_ANYADIR_TITULO</string>
    <string name="TR_APPOINTMENT">TR_APPOINTMENT</string>
    <string name="TR_APP_RUNNING_PLACEHOLDER">TR_APP_RUNNING_PLACEHOLDER</string>
    <string name="TR_APP_VERSION_PLACEHOLDER">TR_APP_VERSION_PLACEHOLDER</string>
    <string name="TR_ARE_YOU_SURE_QUESTION">TR_ARE_YOU_SURE_QUESTION</string>
    <string name="TR_ASEGURARSE_CAMARA_CONECTADA">TR_ASEGURARSE_CAMARA_CONECTADA</string>
    <string name="TR_AUN_NO_TIENES_TU_CHEFY">TR_AUN_NO_TIENES_TU_CHEFY</string>
    <string name="TR_AUTOMATIC">TR_AUTOMATIC</string>
    <string name="TR_AVAILABILITY_MODULE">TR_AVAILABILITY_MODULE</string>
    <string name="TR_AVAILABLE_DEVICES">TR_AVAILABLE_DEVICES</string>
    <string name="TR_BACK">TR_BACK</string>
    <string name="TR_BACK_TO_MENU">TR_BACK_TO_MENU</string>
    <string name="TR_BEBE">TR_BEBE</string>
    <string name="TR_BEMYBUDDY">TR_BEMYBUDDY</string>
    <string name="TR_BEMYBUDDY_TITLE_IOS">TR_BEMYBUDDY_TITLE_IOS</string>
    <string name="TR_BIRTH_INFORMATION">TR_BIRTH_INFORMATION</string>
    <string name="TR_BLE_NOT_SUPPORTED">TR_BLE_NOT_SUPPORTED</string>
    <string name="TR_BLOG_BUTTON">TR_BLOG_BUTTON</string>
    <string name="TR_BLOG_URL">TR_BLOG_URL</string>
    <string name="TR_BLUETOOTH">TR_BLUETOOTH</string>
    <string name="TR_BLUETOOTH_CONECTION">TR_BLUETOOTH_CONECTION</string>
    <string name="TR_BLUETOOTH_ENABLED_MESSAGE">TR_BLUETOOTH_ENABLED_MESSAGE</string>
    <string name="TR_BLUETOOTH_INSTRUCTIONS_DISABLED">TR_BLUETOOTH_INSTRUCTIONS_DISABLED</string>
    <string name="TR_BLUETOOTH_INSTRUCTIONS_ENABLED">TR_BLUETOOTH_INSTRUCTIONS_ENABLED</string>
    <string name="TR_BLUETOOTH_NOT_SUPPORTED">TR_BLUETOOTH_NOT_SUPPORTED</string>
    <string name="TR_BORRAR">TR_BORRAR</string>
    <string name="TR_BORRAR_CAM_POR_ACTUALIZACION">TR_BORRAR_CAM_POR_ACTUALIZACION</string>
    <string name="TR_BORRAR_DATOS">TR_BORRAR_DATOS</string>
    <string name="TR_BORRAR_FOTO">TR_BORRAR_FOTO</string>
    <string name="TR_BORRAR_INFORMACION">TR_BORRAR_INFORMACION</string>
    <string name="TR_BROTHER_SISTER">TR_BROTHER_SISTER</string>
    <string name="TR_BUSCANDO_ESCUCHALATIDOS">TR_BUSCANDO_ESCUCHALATIDOS</string>
    <string name="TR_CABEZA">TR_CABEZA</string>
    <string name="TR_CALCULAR_MI_FECHA_DE_PARTO">TR_CALCULAR_MI_FECHA_DE_PARTO</string>
    <string name="TR_CALENDAR">TR_CALENDAR</string>
    <string name="TR_CAMARA_IP_WIFI_WARNING">TR_CAMARA_IP_WIFI_WARNING</string>
    <string name="TR_CAMBIO">TR_CAMBIO</string>
    <string name="TR_CAMERA_FOUND">TR_CAMERA_FOUND</string>
    <string name="TR_CAMERA_LAN_SEARCH">TR_CAMERA_LAN_SEARCH</string>
    <string name="TR_CAMERA_MONITOR_ADVERTISMENT">TR_CAMERA_MONITOR_ADVERTISMENT</string>
    <string name="TR_CAMERA_NAME">TR_CAMERA_NAME</string>
    <string name="TR_CAMERA_NAME_CAN_NOT_BE_EMPTY">TR_CAMERA_NAME_CAN_NOT_BE_EMPTY</string>
    <string name="TR_CAMERA_OFFLINE">TR_CAMERA_OFFLINE</string>
    <string name="TR_CAMERA_RUNNNING_PLACEHOLDER">TR_CAMERA_RUNNNING_PLACEHOLDER</string>
    <string name="TR_CAMERA_SNAPSHOTS">TR_CAMERA_SNAPSHOTS</string>
    <string name="TR_CAMERA_START_TEXT">TR_CAMERA_START_TEXT</string>
    <string name="TR_CAMERA_UID">TR_CAMERA_UID</string>
    <string name="TR_CAMERA_UID_LENGTH_MUST_BE_20_CHARACTERS">TR_CAMERA_UID_LENGTH_MUST_BE_20_CHARACTERS</string>
    <string name="TR_CANCEL">TR_CANCEL</string>
    <string name="TR_CERRAR">TR_CERRAR</string>
    <string name="TR_CHANGE">TR_CHANGE</string>
    <string name="TR_CHANNEL">TR_CHANNEL</string>
    <string name="TR_CHECKING_BUDDY_CODE">TR_CHECKING_BUDDY_CODE</string>
    <string name="TR_CHOOSE_A_NETWORK">TR_CHOOSE_A_NETWORK</string>
    <string name="TR_CHOOSE_DATE">TR_CHOOSE_DATE</string>
    <string name="TR_CITAS_MEDICAS">TR_CITAS_MEDICAS</string>
    <string name="TR_CITAS_PENDIENTES">TR_CITAS_PENDIENTES</string>
    <string name="TR_CITA_GUARDADA">TR_CITA_GUARDADA</string>
    <string name="TR_CLASES_DE_PREPARACION_AL_PARTO">TR_CLASES_DE_PREPARACION_AL_PARTO</string>
    <string name="TR_CLASSICAL_EXPERIENCE">TR_CLASSICAL_EXPERIENCE</string>
    <string name="TR_CLEAN_FORM">TR_CLEAN_FORM</string>
    <string name="TR_CLICK_TO_KNOW_MORE">TR_CLICK_TO_KNOW_MORE</string>
    <string name="TR_CLOSE_TO_MUM">TR_CLOSE_TO_MUM</string>
    <string name="TR_COBERTURE_BLUETOOTH">TR_COBERTURE_BLUETOOTH</string>
    <string name="TR_CODIGO_POSTAL">TR_CODIGO_POSTAL</string>
    <string name="TR_COLEGIADO">TR_COLEGIADO</string>
    <string name="TR_COLLEGIATE_NUM">TR_COLLEGIATE_NUM</string>
    <string name="TR_COMING_SOON">TR_COMING_SOON</string>
    <string name="TR_COMMENTS">TR_COMMENTS</string>
    <string name="TR_COMPANY">TR_COMPANY</string>
    <string name="TR_COMPATIBILITY_BLUETOOTH">TR_COMPATIBILITY_BLUETOOTH</string>
    <string name="TR_COMPLETE_ALL_FIELDS">TR_COMPLETE_ALL_FIELDS</string>
    <string name="TR_CONDICIONES_USO">TR_CONDICIONES_USO</string>
    <string name="TR_CONFIGURE">TR_CONFIGURE</string>
    <string name="TR_CONFIG_DEVICE_INIT_TIP">TR_CONFIG_DEVICE_INIT_TIP</string>
    <string name="TR_CONFIRM">TR_CONFIRM</string>
    <string name="TR_CONFIRMAR_PASSWORD">TR_CONFIRMAR_PASSWORD</string>
    <string name="TR_CONFIRM_PASSWORD">TR_CONFIRM_PASSWORD</string>
    <string name="TR_CONNECTED_WIFI">TR_CONNECTED_WIFI</string>
    <string name="TR_CONNECTING">TR_CONNECTING</string>
    <string name="TR_CONNECTING_DEVICE">TR_CONNECTING_DEVICE</string>
    <string name="TR_CONNECT_DEVICE_OFFLINE">TR_CONNECT_DEVICE_OFFLINE</string>
    <string name="TR_CONNECT_FAILED">TR_CONNECT_FAILED</string>
    <string name="TR_CONNECT_INTRUCTIONS">TR_CONNECT_INTRUCTIONS</string>
    <string name="TR_CONNECT_NOW">TR_CONNECT_NOW</string>
    <string name="TR_CONNECT_OTHER_WIFI">TR_CONNECT_OTHER_WIFI</string>
    <string name="TR_CONNECT_PHONE_NETWORK">TR_CONNECT_PHONE_NETWORK</string>
    <string name="TR_CONTACTO">TR_CONTACTO</string>
    <string name="TR_CONTACTO_INFO_HTML_TEXT">TR_CONTACTO_INFO_HTML_TEXT</string>
    <string name="TR_CONTINUAR">TR_CONTINUAR</string>
    <string name="TR_CONTINUE">TR_CONTINUE</string>
    <string name="TR_CONTINUE_DOWNLOAD_MESSAGE">TR_CONTINUE_DOWNLOAD_MESSAGE</string>
    <string name="TR_CONTRACCION_GUARDADA_CORRECTAMENTE">TR_CONTRACCION_GUARDADA_CORRECTAMENTE</string>
    <string name="TR_CONTRASENYA_ROBUSTA_ERROR">TR_CONTRASENYA_ROBUSTA_ERROR</string>
    <string name="TR_COPYRIGTH_INFO">TR_COPYRIGTH_INFO</string>
    <string name="TR_COUNTRY">TR_COUNTRY</string>
    <string name="TR_COUSIN">TR_COUSIN</string>
    <string name="TR_CRANIAL_PERIMETER">TR_CRANIAL_PERIMETER</string>
    <string name="TR_CUENTA_ATRAS">TR_CUENTA_ATRAS</string>
    <string name="TR_DATE">TR_DATE</string>
    <string name="TR_DATE_BIRTH">TR_DATE_BIRTH</string>
    <string name="TR_DATE_BIRTH_WITH_FORMAT">TR_DATE_BIRTH_WITH_FORMAT</string>
    <string name="TR_DATOS_MEDICOS">TR_DATOS_MEDICOS</string>
    <string name="TR_DEBES_APORTAR_AL_MENOS_UNA_FOTO_O_Y_COMENTARIO">TR_DEBES_APORTAR_AL_MENOS_UNA_FOTO_O_Y_COMENTARIO</string>
    <string name="TR_DEBES_REGISTRAR_TU_CHEFY">TR_DEBES_REGISTRAR_TU_CHEFY</string>
    <string name="TR_EVOLUCION_PESO">TR_EVOLUCION_PESO</string>
    <string name="TR_FECHA">TR_FECHA</string>
    <string name="TR_FECHA_MEDIDA">TR_FECHA_MEDIDA</string>
    <string name="TR_MI_TRIPITA">TR_MI_TRIPITA</string>
    <string name="TR_MOVIMIENTOS_FETALES">TR_MOVIMIENTOS_FETALES</string>
    <string name="TR_TENSION_ARTERIAL">TR_TENSION_ARTERIAL</string>
    <string name="TR_WEIGHT">TR_WEIGHT</string>
    <string name="connect_Bt">connectBt</string>
    <string name="debug_info">Debug Info</string>
    <string name="info_area">Info Area</string>
    <string name="openBt">openBt</string>
    <string name="rate_button">RATE_BUTTON</string>
    <string name="rate_message">RATE_MESSAGE</string>
    <string name="rate_no_button">RATE_NO_BUTTON</string>
    <string name="rate_remind_later">RATE_REMIND_LATER</string>
    <string name="record">record</string>
    <string name="searchBt">searchBt</string>
    <string name="service_status">Service Status</string>
    <string name="tocoReset">toco reset</string>
</resources>