<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:paddingLeft="15dp" android:paddingTop="2dp" android:paddingRight="15dp" android:paddingBottom="2dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="@dimen/mama_text_size_28pt" android:textColor="@color/mama_menu_options_text_color" android:id="@+id/mama_weight_height_item_week" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/TR_FECHA_MEDIDA"/>
    <TextView android:textSize="@dimen/mama_text_size_20pt" android:textColor="@color/mama_item_date_color" android:id="@+id/mama_weight_height_item_date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-5dp" android:text="@string/TR_FECHA" android:layout_below="@+id/mama_weight_height_item_week"/>
    <TextView android:textSize="@dimen/mama_text_size_50pt" android:textColor="@color/mama_menu_options_color" android:id="@+id/mama_weight_height_item_value" android:paddingTop="5dp" android:paddingBottom="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/TR_WEIGHT" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
</RelativeLayout>
