<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.sozpic.miniland.TopMenuActivity android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@+id/mama_common_toolbar_header" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="@dimen/alto_menu_head"/>
    <include android:id="@+id/mum_header" android:layout_width="match_parent" android:layout_height="wrap_content" layout="@layout/layout_pregnancy_section_header"/>
    <RelativeLayout android:id="@+id/rl_weight_evolution" android:background="?attr/selectableItemBackground" android:paddingLeft="14dp" android:paddingTop="12dp" android:paddingRight="14dp" android:paddingBottom="12dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@+id/img_weight_evolution" android:layout_width="33dp" android:layout_height="24dp" android:src="@drawable/ic_weight_evolution" android:scaleType="centerInside" android:layout_centerVertical="true"/>
        <com.sozpic.miniland.componentes.TextViewHelvetica android:textSize="@dimen/mom_options_text_size_28px" android:textColor="@color/mama_menu_options_text_color" android:gravity="start" android:id="@+id/tv_wight_evolution" android:paddingLeft="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/TR_EVOLUCION_PESO" android:layout_toRightOf="@+id/img_weight_evolution" android:layout_centerVertical="true"/>
        <ImageView android:id="@+id/img_weight_evolution_go" android:layout_width="17dp" android:layout_height="17dp" android:src="@drawable/ic_mum_arrow_go" android:scaleType="centerInside" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View android:background="@color/mama_menu_options_text_color" android:layout_width="match_parent" android:layout_height="0.5dp"/>
    <RelativeLayout android:id="@+id/rl_blood_pressure" android:background="?attr/selectableItemBackground" android:paddingLeft="14dp" android:paddingTop="10dp" android:paddingRight="14dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@+id/img_blood_pressure" android:layout_width="35dp" android:layout_height="26dp" android:src="@drawable/ic_blood_presure" android:scaleType="centerInside" android:layout_centerVertical="true"/>
        <com.sozpic.miniland.componentes.TextViewHelvetica android:textSize="@dimen/mom_options_text_size_28px" android:textColor="@color/mama_menu_options_text_color" android:gravity="start" android:id="@+id/tv_blood_pressure" android:paddingLeft="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/TR_TENSION_ARTERIAL" android:layout_toRightOf="@+id/img_blood_pressure" android:layout_centerVertical="true"/>
        <ImageView android:id="@+id/img_blood_pressure_go" android:layout_width="17dp" android:layout_height="17dp" android:src="@drawable/ic_mum_arrow_go" android:scaleType="centerInside" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View android:background="@color/mama_menu_options_text_color" android:layout_width="match_parent" android:layout_height="0.5dp"/>
    <RelativeLayout android:id="@+id/rl_baby_movements" android:background="?attr/selectableItemBackground" android:paddingLeft="14dp" android:paddingTop="10dp" android:paddingRight="14dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@+id/img_baby_movements" android:layout_width="35dp" android:layout_height="26dp" android:src="@drawable/ic_baby_movements" android:scaleType="centerInside" android:layout_centerVertical="true"/>
        <com.sozpic.miniland.componentes.TextViewHelvetica android:textSize="@dimen/mom_options_text_size_28px" android:textColor="@color/mama_menu_options_text_color" android:gravity="start" android:id="@+id/tv_baby_movements" android:paddingLeft="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/TR_MOVIMIENTOS_FETALES" android:layout_toRightOf="@+id/img_baby_movements" android:layout_centerVertical="true"/>
        <ImageView android:id="@+id/img_baby_movements_go" android:layout_width="17dp" android:layout_height="17dp" android:src="@drawable/ic_mum_arrow_go" android:scaleType="centerInside" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View android:background="@color/mama_menu_options_text_color" android:layout_width="match_parent" android:layout_height="0.5dp"/>
    <RelativeLayout android:id="@+id/rl_uterus_height" android:background="?attr/selectableItemBackground" android:paddingLeft="14dp" android:paddingTop="5dp" android:paddingRight="14dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@+id/img_uterus_height" android:layout_width="40dp" android:layout_height="31dp" android:src="@drawable/ic_uterus_height" android:scaleType="centerInside" android:layout_centerVertical="true"/>
        <com.sozpic.miniland.componentes.TextViewHelvetica android:textSize="@dimen/mom_options_text_size_28px" android:textColor="@color/mama_menu_options_text_color" android:gravity="start" android:id="@+id/tv_uterus_height" android:paddingLeft="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/TR_ALTURA_UTERO" android:layout_toRightOf="@+id/img_uterus_height" android:layout_centerVertical="true"/>
        <ImageView android:id="@+id/img_uterus_height_go" android:layout_width="17dp" android:layout_height="17dp" android:src="@drawable/ic_mum_arrow_go" android:scaleType="centerInside" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View android:background="@color/mama_menu_options_text_color" android:layout_width="match_parent" android:layout_height="0.5dp"/>
    <RelativeLayout android:id="@+id/rl_my_belly" android:background="?attr/selectableItemBackground" android:paddingLeft="14dp" android:paddingTop="4dp" android:paddingRight="14dp" android:paddingBottom="4dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@+id/img_my_belly" android:layout_width="41dp" android:layout_height="32dp" android:src="@drawable/ic_my_belly" android:scaleType="centerInside" android:layout_centerVertical="true"/>
        <com.sozpic.miniland.componentes.TextViewHelvetica android:textSize="@dimen/mom_options_text_size_28px" android:textColor="@color/mama_menu_options_text_color" android:gravity="start" android:id="@+id/tv_my_belly" android:paddingLeft="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/TR_MI_TRIPITA" android:layout_toRightOf="@+id/img_my_belly" android:layout_centerVertical="true"/>
        <ImageView android:id="@+id/img_my_belly_go" android:layout_width="17dp" android:layout_height="17dp" android:src="@drawable/ic_mum_arrow_go" android:scaleType="centerInside" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <View android:background="@color/mama_menu_options_text_color" android:layout_width="match_parent" android:layout_height="0.5dp"/>
</LinearLayout>
